[package]
name = "clash-cmoet"
version = "0.1.0"
description = "clash cmoet"
authors = ["AmelloAster"]
license = "GPL-3.0"
repository = "https://github.com/AmelloAster/clash-comet"
default-run = "clash-cmoet"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.2", features = [] }

[dependencies]
warp = "0.3"
which = "4.2.2"
anyhow = "1.0"
dirs = "4.0.0"
open = "3.0.1"
log = "0.4"
dunce = "1.0.2"
log4rs = "1.1.1"
nanoid = "0.4.0"
chrono = "0.4"
auto-launch = "0.2"
port_scanner = "0.1"
delay_timer = "0.11"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.2", features = ["api-all", "system-tray"] }
window-shadows = { version = "0.1" }
window-vibrancy = { version = "0.1" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
